# bm4d-of

./: .gitignore  CMakeLists.txt  Makefile  README  README.txt
doc/: README  test_log
doc/201503_dxo/: Makefile  slides_dxo.tex
doc/201503_vnlmeans/: report.tex
doc/201504_acivs/: paper.tex  video_denoising.bib
doc/201504_acivs/figs/: time_coherence_image.m
doc/201504_vnlbayes_params/: Makefile  slides_vnlb_prms.tex
doc/201504_vnlbayes_workplan/: workplan.tex
doc/201505_vnbayes3d/: Makefile  curvas_optima  slides_vnlb3d.tex
doc/201505_vnbayes3d/figures/: psnr_px1-np1-bars_1r16_s10_average.eps  psnr_px1-np1-bars_1r16_s20_average.eps  psnr_px1-np1-bars_1r16_s40_average.eps  psnr_px1-np1-bars_1r32_s40_average.eps  psnr_px1-np1-bars_1r64_s20_average.eps  psnr_px1-np1-bars_1r8_s10_average.eps  psnr_px2-np2-bars_2r16_s10_army.eps  psnr_px2-np2-bars_2r16_s10_average.eps  psnr_px2-np2-bars_2r16_s10_dogdance.eps  psnr_px2-np2-bars_2r16_s10_evergreen.eps  psnr_px2-np2-bars_2r16_s10_walking.eps  psnr_px2-np2-bars_2r16_s20_army.eps  psnr_px2-np2-bars_2r16_s20_average.eps  psnr_px2-np2-bars_2r16_s20_dogdance.eps  psnr_px2-np2-bars_2r16_s20_evergreen.eps  psnr_px2-np2-bars_2r16_s20_walking.eps  psnr_px2-np2-bars_2r16_s40_army.eps  psnr_px2-np2-bars_2r16_s40_average.eps  psnr_px2-np2-bars_2r16_s40_dogdance.eps  psnr_px2-np2-bars_2r16_s40_evergreen.eps  psnr_px2-np2-bars_2r16_s40_walking.eps  psnr_px2-np2-bars_2r32_s10_army.eps  psnr_px2-np2-bars_2r32_s10_average.eps  psnr_px2-np2-bars_2r32_s10_dogdance.eps  psnr_px2-np2-bars_2r32_s10_evergreen.eps  psnr_px2-np2-bars_2r32_s10_walking.eps  psnr_px2-np2-bars_2r32_s20_army.eps  psnr_px2-np2-bars_2r32_s20_average.eps  psnr_px2-np2-bars_2r32_s20_dogdance.eps  psnr_px2-np2-bars_2r32_s20_evergreen.eps  psnr_px2-np2-bars_2r32_s20_walking.eps  psnr_px2-np2-bars_2r32_s40_army.eps  psnr_px2-np2-bars_2r32_s40_average.eps  psnr_px2-np2-bars_2r32_s40_dogdance.eps  psnr_px2-np2-bars_2r32_s40_evergreen.eps  psnr_px2-np2-bars_2r32_s40_walking.eps  psnr_px2-np2-bars_2r64_s10_army.eps  psnr_px2-np2-bars_2r64_s10_average.eps  psnr_px2-np2-bars_2r64_s10_dogdance.eps  psnr_px2-np2-bars_2r64_s10_evergreen.eps  (+412 more)
doc/201506_cambridge_slides/: Makefile  slides_vnlb.tex
doc/201506_cambridge_slides/figures/: middlebury_combine_videos.m
doc/201506_cambridge_slides/figures_local/: derf_generate_details.m  images_local_copy.sh
doc/201507_tip/: average_psnr.m  covariance_estimation.bib  figs_cambridge  image_denoising.bib  paper.tex  video_denoising.bib
doc/201507_tip/figs/params_tables/: bpsnr-fpsnr_r1-np1-curves_s10_average_derf.eps  bpsnr-fpsnr_r1-np1-curves_s10_average_mono.eps  bpsnr-fpsnr_r1-np1-curves_s20_average_derf.eps  (+135 more)
doc/201511_notes/: notes.tex  numerical_simulation.m  test.m  variance-bias.eps  weight_pdf-snr.eps  weight_pdf.eps
doc/201511_report_plein-phare/: covariance_estimation.bib  figs  figs_cambridge  figs_local_cambridge  image_denoising.bib  report_plein-phare.tex
doc/201511_slides_plein-phare/: figs  figures_local  slides_vnlb.tex
doc/201511_slides_plein-phare/template/: template_cmla_slides_plein-phare.tex
doc/201511_vnlb_website/: index.html
doc/201511_vnlb_website/vnlb_files/: style.css  tt
doc/201602_ms-nl-dct/: algorithm2e.sty  image_denoising.bib  ipol.cls  main.tex  siam.bst  test.m  video_denoising.bib
lib/id_dist/: CMakeLists.txt  Makefile
lib/iio/: CMakeLists.txt  iio.c
lib/ms-lanczos3/: lanczos3_decompose.m  lanczos3_down.m  lanczos3_recompose.m  lanczos3_up.m  recompose.m
prof/: README  analysis_step2_eigs_vs_inv.m  analysis_step2_idsvd_vs_eigs.m  callgrind.out.s10-eigs  callgrind.out.s10-eigs-12  callgrind.out.s10-idsvd  callgrind.out.s10-idsvd-12  callgrind.out.s10-inv  callgrind.out.s20-eigs  callgrind.out.s20-eigs-12  callgrind.out.s20-idsvd  callgrind.out.s20-idsvd-12  callgrind.out.s20-inv  callgrind.out.s40-eigs  callgrind.out.s40-eigs-12  callgrind.out.s40-idsvd  callgrind.out.s40-idsvd-12  callgrind.out.s40-inv
scripts/: CMakeLists.txt  bm4dof-gt.sh  bm4dof.sh  msbm4dof-gt.sh  msbm4dof.sh  train-video.sh  tvl1flow-seq.sh
src/: CMakeLists.txt  awgn.cpp  main.cpp  main_vnlb.cpp  main_vnlm.cpp  psnr.cpp
src/NlBayes/: CMakeLists.txt  LibDCT.cpp  LibMatrix.cpp  LibMatrix.h  NlBayes.cpp  NlBayes.h  VideoNLBayes.cpp  VideoNLBayes.h  VideoNLMeans.cpp  VideoNLMeans.h
src/Utilities/: LibImages.cpp  LibImages.h  LibVideo-utils.cpp  LibVideo.cpp  LibVideo.h  LibVideoT.hpp  LibVideoUtils.cpp  Utilities.cpp
src/core/: CMakeLists.txt  LibDCT.cpp  VideoNLBayes.cpp  dct_handler.cpp  dct_handler.h  matrix_funs.cpp  nldct.cpp  nldct.h
src/scripts/: nldct-mp4.sh  train-video.sh  train.sh
src/tests/: CMakeLists.txt  patch_group.cpp  testLibDCT.cpp  testLibVideoT.cpp  test_dct_handler.cpp  test_lib_videot.cpp
src/unit_tests/: CMakeLists.txt  patch_group.cpp  testLibDCT.cpp  testLibMatrix.cpp  testLibVideo.cpp  testLibVideoT.cpp  testVideoNLBayes.cpp  testVideoNLMeans.cpp
src/utils/: LibImages.cpp  LibVideoT.cpp  lib_image.cpp  lib_videot.cpp  lib_videot.hpp  utilities.cpp  utilities.h
tools/: build_patch_image.m  combine_videos.m  compute_bayes_estimate.m  compute_frame_rmse.m  compute_oflow_derivative.m  derf_combine_videos.m  derf_generate_details.m  derf_psnr_curves.m  generate_cubes.sh  generate_tables.sh  generate_time_slices_for_tip.m  nlbayes.m  nlbayes_step.m  param_search.py  patch_group.m  patch_group_image.m  print_cube.sh  print_rank1-vs-np1_tables.sh  print_rank2-vs-np2_tables.sh  psnr_curves.m  psnr_vs_np1_np2_ag_images_compare.m  psnr_vs_np1_np2_b1_images_compare.m  psnr_vs_np1_np2_bm_images_compare.m  psnr_vs_np1_np2_images_1cntrYvsN_img.m  psnr_vs_np1_np2_images_compare.m  psnr_vs_np1_np2_images_posvsneg_img.m  psnr_vs_px_rank_np_bars.m  psnr_vs_px_wx_bars.m  psnr_vs_rank_np_bars.m  psnr_vs_rank_np_images.m  psnr_vs_rank_np_images_mono.m  psnr_vs_rank_np_images_posvsneg.m  psnr_vs_rank_px_np_bars.m  rank1_test_middlebury.py  rank2_test_middlebury.py  run_derf.py  run_derf_mono.py  run_middlebury.py  save_sequence.m  temporal_consistency_table.m  (+4 more)
(+160 files in other folders)
